Fix race condition between QEventLoop::exec and QThread::exit

As also mentioned in QTBUG-16692

Reviewed-by: brad
Task-number: QTBUG-17257